--- a/Sukhdari_Client/wwwroot/index.html
+++ b/Sukhdari_Client/wwwroot/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Sukhdari</title>
-    <base href="/" />
+    <base href="/MyApp/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="Sukhdari_Client.styles.css" rel="stylesheet" />
